[gd_scene load_steps=8 format=3 uid="uid://qv8c2aitufq0"]

[ext_resource type="Script" path="res://alchemy/potions/potion_effects/effects/spawner_effects/potion_projectile/projectiles/bomb/explosion/explosion.gd" id="1_2eb3u"]
[ext_resource type="Texture2D" uid="uid://cmucpuqgtqn0u" path="res://alchemy/potions/potion_effects/effects/spawner_effects/potion_projectile/projectiles/bomb/explosion/animation/explosive-bomb-1.png" id="2_2ommw"]
[ext_resource type="Texture2D" uid="uid://c24pxqepeqra7" path="res://alchemy/potions/potion_effects/effects/spawner_effects/potion_projectile/projectiles/bomb/explosion/animation/explosive-bomb-2.png" id="3_qwa1n"]
[ext_resource type="Texture2D" uid="uid://dxj2ckramvtq6" path="res://alchemy/potions/potion_effects/effects/spawner_effects/potion_projectile/projectiles/bomb/explosion/animation/explosive-bomb-3.png" id="4_4x4px"]
[ext_resource type="Texture2D" uid="uid://cdm1ehdil7gx3" path="res://alchemy/potions/potion_effects/effects/spawner_effects/potion_projectile/projectiles/bomb/explosion/animation/explosive-bomb-4.png" id="5_rw17c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n6s0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2ommw")
}, {
"duration": 1.0,
"texture": ExtResource("3_qwa1n")
}, {
"duration": 1.0,
"texture": ExtResource("4_4x4px")
}, {
"duration": 1.0,
"texture": ExtResource("5_rw17c")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j0ber"]
radius = 384.0

[node name="Explosion" type="Area2D"]
collision_layer = 0
collision_mask = 97
script = ExtResource("1_2eb3u")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -144)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_n6s0q")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j0ber")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
